<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicle_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/street_background"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/theme_icon1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/evlogo" />

    <ImageView
        android:id="@+id/theme_icon2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/evlogo" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        android:onClick="onStatusClick"
        android:text="@string/vehicle_capacity_analysis"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_icon2" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:onClick="onStatusClick"
        android:text="@string/preliminary_payload_analysis"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <com.example.vehiclecapacityanalysis.CustomToggle
        android:id="@+id/custom_toggle"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:elevation="8dp"
        android:layout_marginTop="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="227dp"
        android:layout_height="56dp"
        android:layout_marginTop="388dp"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/computeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/compute"
        android:background="@drawable/light_compute_button_background"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightEditText" />


    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        app:layout_constraintBottom_toTopOf="@id/computeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />


    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        android:contentDescription="@string/arrow_left"
        android:onClick="navigateToMainActivity"/>

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        android:contentDescription="@string/arrowright"
        android:onClick="navigateToMainPayload"/>

</androidx.constraintlayout.widget.ConstraintLayout>
